Stop text overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@ body {
 .youtubechannelimage {
     padding-right: 0px;
     padding-left: 0px;
-    max-height: 100%;
+    max-height: 300px;
     width: auto;
 }
 
@@ -134,7 +134,7 @@ body {
     align-items: stretch;
     margin-top: 20px;
     padding: 10px;
-    max-height: 320px;
+    max-height: 400px;
     background-color: whitesmoke;
     border-radius: 20px;
 }
